--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="relogio-dinamico/assets/css/style.css">
     <title>Relógio</title>
 </head>
-<body>
-    <div class="relógio">
+<body onload="time()">
+    <div class="relogio">
         <div>
             <span id="horas">00</span>
             <span class="tempo">horas</span>
@@ -19,8 +20,8 @@
             <span id="segundos">00</span>
             <span class="tempo">segundos</span>
         </div>
-        <div></div>
-        <div></div>
+        
     </div>
+    <script src="relogio-dinamico/assets/js/script.js"></script>
 </body>
 </html>
